Updates to history, add ajax load function for loading older events

--- a/css/projects.css
+++ b/css/projects.css
@@ -21,6 +21,7 @@ p {margin: 1em 0;}
 .icon-pencil {background-position: 0 -72px;}
 .icon-remove {background-position: -312px 0;}
 .icon-ok {background-position: -288px 0;}
+.icon-download {background-position: -120px -24px;}
 
 /*
  * Header
