--- a/css/projects.css
+++ b/css/projects.css
@@ -10,6 +10,7 @@ a:hover, a:active {outline: 0;}
 h2 {font-weight: bold;font-size: 1.2em;}
 p {margin: 1em 0;}
 .center {text-align:center;}
+#content {height: auto;}
 
 /*
  * Glyphicons
@@ -27,6 +28,7 @@ p {margin: 1em 0;}
  * Header
  */
 
+.top-menu {position: fixed;top: 45px;left: 64px;right: 0;}
 .breadcrumb {padding: 8px 15px;list-style: none;background-color: #F5F5F5;}
 .breadcrumb li {display: inline-block;text-shadow: 0 1px 0 #FFF;}
 .breadcrumb li .divider {padding: 0 5px;color: #CCC;}
@@ -38,7 +40,7 @@ p {margin: 1em 0;}
  * Main
  */
 
-#main {margin:1em;}
+#main {margin:45px 1em 1em;}
 
 /*
  * History
@@ -46,15 +48,16 @@ p {margin: 1em 0;}
 
 .project_action {margin:1em 0;}
 .project_action img {margin: 0 1em; vertical-align: middle;}
-.project_action .excerpt {font-weight:bold; font-style:normal;}
+.project_action .excerpt {font-style:normal;}
 .event_time {font-size: 0.9em;color: #999;display:inline-block;min-width:100px;}
 
 /*
  * Project list
  */
 
-.project_list {margin: 1em 0;}
-.project_list li a {display: block; border: 1px solid #eee; border-radius: 0.5em; padding: 1em; margin: 1em;box-shadow: 0 5px 5px -5px #CCC;}
+.project_list {margin: 1em 0; text-align:center;}
+.project_list li {display: inline-block;vertical-align: top;width: 24%;}
+.project_list li a {display: block; border: 1px solid #eee; border-radius: 0.5em; padding: 1em; margin: 1em;box-shadow: 0 5px 5px -5px #CCC;min-height:100px;}
 .project_list li a:hover {text-decoration: none;}
 .project_list .description {color: #666;}
 #show_archived_projects_container {text-align: center;border-bottom: 1px solid #EEE;margin: 1em 0em 2em;height: 1.4em;}
@@ -84,9 +87,9 @@ p {margin: 1em 0;}
  * Project
  */
 
-.project_preview {display: block;border: 1px solid #EEE;border-radius: 0.5em;padding: 1em;margin: 1em;box-shadow: 0 5px 5px -5px #CCC;}
+.project_preview {display: inline-block;vertical-align:top;border: 1px solid #EEE;border-radius: 0.5em;padding: 1em;margin: 1em;box-shadow: 0 5px 5px -5px #CCC;}
 .project_preview:hover {text-decoration: none;}
-.project_preview h2 {text-align: center;}
+.project_preview h2 {text-align: center;margin: 0.2em 0 .6em;}
 .project_preview .project_action img {display: none;}
 .project_preview .project_action {margin: 0;}
 
@@ -94,7 +97,7 @@ p {margin: 1em 0;}
  * Details
  */
 
-p.loading_details {opacity:.5;}
+.loading_details {opacity:.5;}
 #edit_details input[type="text"] {border: none;box-shadow: none;background: #FFF;border-bottom: dotted 1px #fff;border-radius: 0;width: 50%;color: #000;padding: 0; -o-transition: border-color 0.4s; -webkit-transition: border-color 0.4s; -moz-transition: border-color 0.4s;transition: border-color 0.4s;}
 #edit_details input[type="text"]:hover {border-bottom: dotted 1px #ccc;-}
 #edit_details input[type="text"]:focus {border-bottom: dotted 1px #AAA;}
@@ -131,6 +134,8 @@ p.loading_details {opacity:.5;}
  * Notes
  */
 
+.notes-list {}
+.notes-list li {width: 24%; display: inline-block; vertical-align: top; min-height: 100px;}
 #new_note_button {margin: 1.5em auto;display: block;}
 .note {border: 1px solid #EEE;padding: 1em;margin: 1em;box-shadow: 0 5px 5px -5px #CCC;}
 .note footer {color: #888;}
