--- a/css/projects.css
+++ b/css/projects.css
@@ -20,11 +20,17 @@
 #content h4 {
     color: rgb(51, 51, 51);
 }
+#content .button {
+	line-height: 1.6em;
+}
 #content a {
 
 }
 #content a:hover {
     text-decoration: underline;
+}
+#content a.button:hover {
+	text-decoration: none;
 }
 #content .inline {
     display: inline;
@@ -307,13 +313,13 @@
 	color: #444;
 	line-height: 20px;
 	border: 1px solid #d2d2d2;
-	background: #fff;
-	background: -webkit-gradient(linear, 0 0, 0 100%, from(#d9eaf3), color-stop(4%, #fff)) 0 4px;
-	background: -webkit-linear-gradient(top, #d9eaf3 0%, #fff 8%) 0 4px;
-	background: -moz-linear-gradient(top, #d9eaf3 0%, #fff 8%) 0 4px;
-	background: -ms-linear-gradient(top, #d9eaf3 0%, #fff 8%) 0 4px;
-	background: -o-linear-gradient(top, #d9eaf3 0%, #fff 8%) 0 4px;
-	background: linear-gradient(top, #d9eaf3 0%, #fff 8%) 0 4px;
+	background: #fcfcfc;
+	background: -webkit-gradient(linear, 0 0, 0 100%, from(#d9eaf3), color-stop(4%, #fcfcfc)) 0 4px;
+	background: -webkit-linear-gradient(top, #d9eaf3 0%, #fcfcfc 8%) 0 4px;
+	background: -moz-linear-gradient(top, #d9eaf3 0%, #fcfcfc 8%) 0 4px;
+	background: -ms-linear-gradient(top, #d9eaf3 0%, #fcfcfc 8%) 0 4px;
+	background: -o-linear-gradient(top, #d9eaf3 0%, #fcfcfc 8%) 0 4px;
+	background: linear-gradient(top, #d9eaf3 0%, #fcfcfc 8%) 0 4px;
 	-webkit-background-size: 100% 20px;
 	-moz-background-size: 100% 20px;
 	-ms-background-size: 100% 20px;
@@ -321,24 +327,24 @@
 	background-size: 100% 20px;
 	border-radius: 3px;
 	box-shadow: 0 1px 2px rgba(0,0,0,.1);
-	min-height: 150px;
+	/*min-height: 240px;*/
 	margin-bottom: 1em;
+	word-wrap: break-word;
+	overflow: hidden;
 }
 
 #content .paper::before {
 	content: '';
 	position: absolute;
 	width: 4px;
-	top: 0;
+	top: -1px;
 	left: 30px;
-	bottom: 0;
-	border: 1px solid;
-	border-color: transparent #efe4e4;
+	bottom: -2px;
+	border: 1px solid #efe4e4;
 }
 
 
 #content .paper textarea {
-	display: block;
 	width: 100%;
 	margin: 0;
 	padding: 0;
@@ -349,4 +355,46 @@
 	box-shadow: none;
 	border-radius: 0;
 	resize: none;
+}
+#content .paper.fade-bottom::after {
+	content: '';
+	background: -webkit-gradient(linear, 0% 0%, 0% 80%, from(rgba(255,255,255,0)), to(#FFF));
+	height: 60px;
+	position: absolute;
+	left: 0;
+	bottom: 0px;
+	right: 0;
+}
+#content .height-240 {
+	height: 240px;
+}
+#content a.no-underline:hover {
+	text-decoration: none;
+}
+
+#content .menu-right {
+	position: absolute;
+	right: 0.95em;
+	top: 8px;
+}
+
+#content .menu-left {
+	position: absolute;
+	left: 0.95em;
+	top: 8px;
+}
+
+#projectName {
+	width: 100%;
+	border: none;
+	background: #fff;
+	border-radius: 0;
+	font-size: 1.5em;
+	box-shadow: none;
+	color: #555;
+	margin: .83em 0;
+	padding: 0;
+}
+#create-project .button {
+	margin: .8em 0 0 .8em;
 }
